# document-assistant

./: ingestion.py  main.py  pyproject.toml
backend/: core.py
chroma_db/: chroma.sqlite3
